Fixes +1748. Make sure the window is always visible

--- a/local.less
+++ b/local.less
@@ -56,6 +56,7 @@
     height: 100%;
     display: inline-block;
     background: url("@{image-path}/winc9.png") no-repeat 0 1px;
+    cursor: default;
 }
 .window-titlebar.win32 .caption{
     background: transparent;
